--- a/Fasetto.Word/Fasetto.Word/App.xaml
+++ b/Fasetto.Word/Fasetto.Word/App.xaml
@@ -4,6 +4,16 @@
              xmlns:local="clr-namespace:Fasetto.Word"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <!-- Order is important here. If we add a button before 
+                color then button won't be able to use color-->
+                <ResourceDictionary Source="Styles/Colors.xaml" />
+                <ResourceDictionary Source="Styles/Fonts.xaml" />
+                <ResourceDictionary Source="Styles/Buttons.xaml" />
+                <ResourceDictionary Source="Styles/Texts.xaml" />
+                <ResourceDictionary Source="Styles/Windows.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
