--- a/Fasetto.Word/Fasetto.Word/MainWindow.xaml
+++ b/Fasetto.Word/Fasetto.Word/MainWindow.xaml
@@ -10,7 +10,9 @@
         x:Name="AppWindow"
         WindowStartupLocation="CenterScreen"
         Icon="Images/Logo/logo-small.png"
-        Title="Welcome, friend!" Height="450" Width="800">
+        MinWidth="{Binding WindowMinimumWidth}"
+        MinHeight="{Binding WindowMinimumHeight}"
+        Title="Welcome, friend" Height="450" Width="800">
 
     <Window.Resources>
         <Style TargetType="{x:Type local:MainWindow}">
@@ -22,6 +24,11 @@
                             <!--Main window outline-->
                             <Grid>
                                 
+                                <!--Opacity Mask for corners on grid-->
+                                <Border x:Name="Container"
+                                        Background="{StaticResource BackgroundLightBrush}"
+                                        CornerRadius="{Binding WindowCornerRadius}" />
+
                                 <!--Window border and dropshadow-->
                                 <Border CornerRadius="{Binding WindowCornerRadius}"
                                         Background="{StaticResource ForegroundLightBrush}">
@@ -36,6 +43,11 @@
                                 <!-- The main window content -->
                                 <Grid>
 
+                                    <!--Corner Clipping-->
+                                    <Grid.OpacityMask>
+                                        <VisualBrush Visual="{Binding ElementName=Container}" />
+                                    </Grid.OpacityMask>
+
                                     <Grid.RowDefinitions>
                                         
                                         <!--Title Bar-->
@@ -48,9 +60,61 @@
                                     </Grid.RowDefinitions>
                                     
                                     <!--Title Bar -->
-                                    <Grid Grid.Column="0" Grid.Row="0" Background="Red" Panel.ZIndex="1">
+                                    <Grid Grid.Column="0" Grid.Row="0" Panel.ZIndex="1">
+
+                                        <Grid.ColumnDefinitions>
+                                            
+                                            <!--Icon-->
+                                            <ColumnDefinition Width="Auto" />
+                                            <!--Title-->
+                                            <ColumnDefinition Width="*" />
+                                            <!--Window Buttons-->
+                                            <ColumnDefinition Width="Auto" />
+
+                                        </Grid.ColumnDefinitions>
+                                        
+                                        <!--Icon-->
+                                        <Button Style="{StaticResource SystemIconButton}" Command="{Binding MenuCommand}">
+                                            <Image Source="Images/Logo/logo-small.png" />
+                                        </Button>
+                                        
+                                        <!--Title-->
+                                        <Viewbox Grid.Column="1" Margin="0" Stretch="Uniform">
+                                            <TextBlock Style="{StaticResource HeaderText}" Text="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=Title}" />
+                                        </Viewbox>
+                                        
+                                        <!--Window Buttons-->
+                                        <StackPanel Orientation="Horizontal" Grid.Column="2">
+                                            <Button Command="{Binding MinimizeCommand}" Style="{StaticResource WindowControlButton}" Content="_" />
+                                            <Button Command="{Binding MaximizeCommand}" Style="{StaticResource WindowControlButton}" Content="[ ]" />
+                                            <Button Command="{Binding CloseCommand}" Style="{StaticResource WindowCloseButton}" Content="X" />
+                                        </StackPanel>
                                         
                                     </Grid>
+                                    
+                                    <!--Drop Shadow-->
+                                    <Border Grid.Row="1" Height="3" BorderThickness="0 0.2 0 0">
+                                        <!--Underline-->
+                                        <Border.BorderBrush>
+                                            <LinearGradientBrush StartPoint="0,0" EndPoint="1,0">
+                                                <GradientStop Color="{StaticResource ForegroundLight}" Offset="0.0" />
+                                                <GradientStop Color="{StaticResource ForegroundMain}" Offset="0.5" />
+                                                <GradientStop Color="{StaticResource ForegroundLight}" Offset="1.0" />
+                                            </LinearGradientBrush>
+                                        </Border.BorderBrush>
+
+                                        <Border.Background>
+                                            <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                                                <GradientStop Color="{StaticResource BackgroundVeryLight}" Offset="0.0" />
+                                                <GradientStop Color="{StaticResource ForegroundLight}" Offset="1.0" />
+                                            </LinearGradientBrush>
+                                        </Border.Background>
+                                    </Border>
+                                    
+                                    <!--Page Content-->
+                                    <Border Grid.Row="2" Padding="{Binding InnerContentPadding}">
+                                        <ContentPresenter Content="{TemplateBinding Content}" />
+                                    </Border>
                                     
                                 </Grid>
                                 
@@ -72,6 +136,6 @@
     </WindowChrome.WindowChrome>
     
     <Grid Background="Red">
-        
+        <Button Style="{StaticResource WindowControlButton}" Content="Test" />
     </Grid>
 </Window>
