--- a/Fasetto.Word/Fasetto.Word/Pages/LogInPage.xaml
+++ b/Fasetto.Word/Fasetto.Word/Pages/LogInPage.xaml
@@ -47,7 +47,7 @@
                             <TextBox Tag="E-mail" />
 
                             <!--Password-->
-                            <TextBox Tag="Password" Margin="0 0 0 30" />
+                            <PasswordBox Tag="Password" Margin="0 0 0 30" />
 
                             <Button Content="Next" HorizontalAlignment="Center" />
 
