--- a/Fasetto.Word/Fasetto.Word/MainWindow.xaml
+++ b/Fasetto.Word/Fasetto.Word/MainWindow.xaml
@@ -99,7 +99,7 @@
                                     </Grid>
                                                                         
                                     <!--Page Content-->
-                                    <Border Grid.Row="1" Padding="{Binding InnerContentPadding}">
+                                    <Border Background="{StaticResource WordBlueBrush}" Grid.Row="1" Padding="{Binding InnerContentPadding}">
                                         <ContentPresenter Content="{TemplateBinding Content}" />
                                     </Border>
                                     
@@ -121,8 +121,12 @@
             CornerRadius="0"
             />
     </WindowChrome.WindowChrome>
-    
-    <Grid Background="{StaticResource ForegroundLightBrush}">
+
+    <Grid>
+        <!--Blue background Image-->
+        <Grid.Background>
+            <ImageBrush TileMode="Tile" ViewportUnits="Absolute" Viewport="0 0 300 300" ImageSource="/Images/Background/emoji-background.png" />
+        </Grid.Background>
         <Frame x:Name="MainFrame" Content="{Binding CurrentPage, Converter={local:ApplicationPageValueConverter}}" />
     </Grid>
 </Window>
