--- a/Fasetto.Word/Fasetto.Word/Pages/LogInPage.xaml
+++ b/Fasetto.Word/Fasetto.Word/Pages/LogInPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page
+﻿<local:BasePage
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,15 +6,11 @@
       xmlns:local="clr-namespace:Fasetto.Word"
       xmlns:Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero" x:Class="Fasetto.Word.LogInPage"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="500" d:DesignWidth="500"
       Title="LogInPage">
 
-    <Border Background="{StaticResource WordBlueBrush}">
+    <Border>
         <Grid>
-            <!--Blue background Image-->
-            <Grid.Background>
-                <ImageBrush TileMode="Tile" ViewportUnits="Absolute" Viewport="0 0 300 300" ImageSource="/Images/Background/emoji-background.png" />
-            </Grid.Background>
 
             <!--Main content-->
             <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
@@ -61,4 +57,4 @@
             </ScrollViewer>
         </Grid>
     </Border>
-</Page>
+</local:BasePage>
