--- a/Fasetto.Word/Fasetto.Word/Styles/Colors.xaml
+++ b/Fasetto.Word/Fasetto.Word/Styles/Colors.xaml
@@ -35,6 +35,11 @@
     <SolidColorBrush x:Key="WordGreenBrush" Color="{StaticResource WordGreen}" />
     
     <!--#endregion-->
-    
+
+    <Color x:Key="WordLightBlue">#45b6e5</Color>
+    <SolidColorBrush x:Key="WordLightBlueBrush" Color="{StaticResource WordLightBlue}" />
+
+    <Color x:Key="WordDarkBlue">#0c6991</Color>
+    <SolidColorBrush x:Key="WordDarkBlueBrush" Color="{StaticResource WordDarkBlue}" />
 
 </ResourceDictionary>
