ItemsControl Chat List & Design Time Data
This tutorial is half completed.

--- a/Fasetto.Word/Fasetto.Word/Controls/SideUserControl.xaml
+++ b/Fasetto.Word/Fasetto.Word/Controls/SideUserControl.xaml
@@ -43,7 +43,7 @@
                     </Grid>
 
                     <!--The user content-->
-                    <ContentPresenter Grid.Row="1" />
+                    <ContentPresenter Content="{TemplateBinding Content}" Grid.Row="1" />
 
                 </Grid>
 
