--- a/Fasetto.Word/Fasetto.Word/Styles/Colors.xaml
+++ b/Fasetto.Word/Fasetto.Word/Styles/Colors.xaml
@@ -42,4 +42,9 @@
     <Color x:Key="WordDarkBlue">#0c6991</Color>
     <SolidColorBrush x:Key="WordDarkBlueBrush" Color="{StaticResource WordDarkBlue}" />
 
+    <!--Color for Very light blue-->
+    <Color x:Key="WordVeryLightBlue">#ecf6fb</Color>
+    <!--Brush to use this very light blue color-->
+    <SolidColorBrush x:Key="WordVeryLightBlueBrush" Color="{StaticResource WordVeryLightBlue}" />
+
 </ResourceDictionary>
