ItemsControl Chat List & Design Time Data
Completed ItemsControl Chat List & Design Time Data tutorial finally.
It is a very big relief.

--- a/Fasetto.Word/Fasetto.Word/MainWindow.xaml
+++ b/Fasetto.Word/Fasetto.Word/MainWindow.xaml
@@ -138,7 +138,7 @@
 
         <!--Side menu control-->
         <local:SideUserControl>
-            <Button Content="Test" />
+            <local:ChatListControl />
         </local:SideUserControl>
     </Grid>
     
