--- a/Fasetto.Word/Fasetto.Word/Styles/Texts.xaml
+++ b/Fasetto.Word/Fasetto.Word/Styles/Texts.xaml
@@ -129,7 +129,7 @@
 
     </Style>
 
-    <Style TargetType="{x:Type TextBlock}" x:Key="SppingText" BasedOn="{StaticResource BaseTextBlockStyle}">
+    <Style TargetType="{x:Type TextBlock}" x:Key="SpiningText" BasedOn="{StaticResource BaseTextBlockStyle}">
 
         <Setter Property="FontFamily" Value="{StaticResource FontAwesome}" />
         <Setter Property="Text" Value="&#xf110;" />
@@ -137,7 +137,7 @@
 
         <Setter Property="RenderTransform">
             <Setter.Value>
-                <RotateTransform></RotateTransform>
+                <RotateTransform />
             </Setter.Value>
         </Setter>
 
@@ -146,7 +146,7 @@
                 <DoubleAnimation Storyboard.TargetProperty="(UIElement.RenderTransform).(RotateTransform.Angle)"
                                  From="0"
                                  To="360"
-                                 Duration="0:0:5"
+                                 Duration="0:0:2"
                                  RepeatBehavior="Forever" />
             </Storyboard>
         </Style.Resources>
@@ -155,11 +155,11 @@
             <DataTrigger Binding="{Binding RelativeSource={x:Static RelativeSource.Self}, Path=IsVisible}" Value="True">
                 
                 <DataTrigger.EnterActions>
-                    <BeginStoryboard Name="SpinStoryBoard" Storyboard="{StaticResource Spin}" />
+                    <BeginStoryboard Name="SpinstoryBoard" Storyboard="{StaticResource Spin}" />
                 </DataTrigger.EnterActions>
 
                 <DataTrigger.ExitActions>
-                    <RemoveStoryboard BeginStoryboardName="SpinStroyBoard" />
+                    <RemoveStoryboard BeginStoryboardName="SpinstoryBoard" />
                 </DataTrigger.ExitActions>
             </DataTrigger>
         </Style.Triggers>
