Complete Page Animation
I have completed page animation but there is still an issue at the end of video I have found in my code. Which is probably because of some code I have not followind in last video, Hence tomorrow I will fix this issue.

--- a/Fasetto.Word/Fasetto.Word/MainWindow.xaml
+++ b/Fasetto.Word/Fasetto.Word/MainWindow.xaml
@@ -12,7 +12,7 @@
         Icon="Images/Logo/logo-small.png"
         MinWidth="{Binding WindowMinimumWidth}"
         MinHeight="{Binding WindowMinimumHeight}"
-        Title="Welcome, friend" Height="550" Width="650">
+        Title="Welcome, friend" Height="525" Width="450">
 
     <Window.Resources>
         <Style TargetType="{x:Type local:MainWindow}">
@@ -133,12 +133,13 @@
         <Grid.Background>
             <ImageBrush TileMode="Tile" ViewportUnits="Absolute" Viewport="0 0 300 300" ImageSource="/Images/Background/emoji-background.png" />
         </Grid.Background>
-        
-        <Frame Grid.Column="1" 
-               x:Name="MainFrame" 
-               Content="{Binding ApplicationViewModel.CurrentPage, 
+
+        <local:PageHost Grid.Column="1" 
+               d:DataContext=""
+               DataContext="{Binding ApplicationViewModel.CurrentPage, 
                                  Source={x:Static local:ViewModelLocator.Instance}, 
-                                 Converter={local:ApplicationPageValueConverter}}" />
+                                 Converter={local:ApplicationPageValueConverter}}"
+               CurrentPage="{Binding}" />
 
         <!--Side menu control-->
         <local:SideUserControl Width="250" local:AnimateSlideInFromLeftProperty.Value ="False">
