--- a/Fasetto.Word/Fasetto.Word/Pages/RegisterPage.xaml
+++ b/Fasetto.Word/Fasetto.Word/Pages/RegisterPage.xaml
@@ -1,11 +1,11 @@
 ﻿<local:BasePage
-      x:TypeArguments="core:LoginViewModel"
+      x:TypeArguments="core:RegisterViewModel"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Fasetto.Word"
-    xmlns:core="clr-namespace:Fasetto.Word.Core;assembly=Fasetto.Word.Core"
+      xmlns:core="clr-namespace:Fasetto.Word.Core;assembly=Fasetto.Word.Core"
     x:Class="Fasetto.Word.RegisterPage"
       mc:Ignorable="d" 
       x:Name="Page"
@@ -49,8 +49,8 @@
                             <PasswordBox x:Name="PasswordText" Tag="Password" Margin="0 0 0 30" />
 
                             <Button Content="Register" 
-                                    local:IsBusyProperty.Value="{Binding LoginIsRunning}"
-                                    Command="{Binding LoginCommand}" 
+                                    local:IsBusyProperty.Value="{Binding RegisterIsRunning}"
+                                    Command="{Binding RegisterCommand}" 
                                     CommandParameter="{Binding ElementName=Page}" 
                                     HorizontalAlignment="Center" />
 
@@ -58,7 +58,10 @@
 
                     </Border>
 
-                    <Button Style="{StaticResource TextButton}" Content="Or, I already have an account..." HorizontalAlignment="Center"/>
+                    <Button Style="{StaticResource TextButton}" 
+                            Command="{Binding LoginCommand}"
+                            Content="Or, I already have an account..." 
+                            HorizontalAlignment="Center"/>
                     
                 </StackPanel>
             </ScrollViewer>
