Complete Chat Message Bubbles tutorial
One thing I noticed after watching videos till now I am getting improve at:
1. Understanding xaml more and more. Because now I am able to understand all the view model bindings in xaml.
2. I am understanding some of C# also because now I can understand what an  class is going to from where.

All this complecated stuff is making me good at programming.

--- a/Fasetto.Word/Fasetto.Word/Pages/ChatPage.xaml
+++ b/Fasetto.Word/Fasetto.Word/Pages/ChatPage.xaml
@@ -11,14 +11,9 @@
       x:Name="Page"
       d:DesignHeight="500" d:DesignWidth="500"
       Title="Chat">
-    
+
     <Border>
-        <TextBlock Text="Hello Fasetto"
-                   Foreground="{StaticResource ForegroundLightBrush}"
-                   FontFamily="{StaticResource LatoBold}"
-                   FontSize="{StaticResource FontSizeLarge}"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center" />
+        <local:ChatMessageListControl />
     </Border>
 
 </local:BasePage>
