--- a/Fasetto.Word/Fasetto.Word/MainWindow.xaml
+++ b/Fasetto.Word/Fasetto.Word/MainWindow.xaml
@@ -12,7 +12,7 @@
         Icon="Images/Logo/logo-small.png"
         MinWidth="{Binding WindowMinimumWidth}"
         MinHeight="{Binding WindowMinimumHeight}"
-        Title="Welcome, friend" Height="525" Width="450">
+        Title="Welcome, friend" Height="525" Width="550">
 
     <Window.Resources>
         <Style TargetType="{x:Type local:MainWindow}">
@@ -20,7 +20,7 @@
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Window}">
                         <!--Outer border with the drop shadow margin-->
-                        <Border Margin="{Binding OuterMarginThickness}">
+                        <Border Padding="{Binding OuterMarginThickness}">
                             <!--Main window outline-->
                             <Grid>
                                 
@@ -79,7 +79,7 @@
                                         <!--Title-->
                                         <Viewbox Grid.Column="0" Grid.ColumnSpan="3" Margin="5" Stretch="Uniform">
                                             <StackPanel>
-                                                <TextBlock FontFamily="{StaticResource LatoBold}" FontSize="{StaticResource FontSizeRegular}" Margin="0 0 0 -5">
+                                                <TextBlock FontFamily="{StaticResource LatoBold}" FontSize="{StaticResource FontSizeLarge}" Margin="0 0 0 -5">
                                                     <Run Text="W" Foreground="{StaticResource WordOrangeBrush}" />
                                                     <Run Text="O" Foreground="{StaticResource WordBlueBrush}" />
                                                     <Run Text="R" Foreground="{StaticResource WordRedBrush}" />
@@ -142,7 +142,9 @@
                CurrentPage="{Binding}" />
 
         <!--Side menu control-->
-        <local:SideUserControl Width="250" local:AnimateSlideInFromLeftProperty.Value ="False">
+        <local:SideUserControl Width="250" 
+                               local:AnimateSlideInFromLeftProperty.Value ="{Binding ApplicationViewModel.SideMenuVisible, 
+                                 Source={x:Static local:ViewModelLocator.Instance}}">
             <local:ChatListControl />
         </local:SideUserControl>
     </Grid>
