--- a/Fasetto.Word/Fasetto.Word/Styles/Fonts.xaml
+++ b/Fasetto.Word/Fasetto.Word/Styles/Fonts.xaml
@@ -11,11 +11,13 @@
     <!--Base style for all content-->
     <Style TargetType="{x:Type Control}" x:Key="BaseStyle">
         <Setter Property="FontFamily" Value="{StaticResource LatoThin}" />
+        <Setter Property="FontSize" Value="{StaticResource FontSizeRegular}" />
     </Style>
 
     <!--Base style for text block. Because Text block is from different -->
     <Style TargetType="{x:Type TextBlock}" x:Key="BaseTextBlockStyle">
         <Setter Property="FontFamily" Value="{StaticResource LatoThin}" />
+        <Setter Property="FontSize" Value="{StaticResource FontSizeRegular}" />
     </Style>
 
     <Style TargetType="{x:Type Button}" BasedOn="{StaticResource BaseStyle}" />
@@ -24,10 +26,12 @@
     <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource BaseTextBlockStyle}" />
     <Style TargetType="{x:Type ListItem}" BasedOn="{StaticResource BaseStyle}" />
 
-    <system:Double x:Key="FontSizeSmall">11</system:Double>
-    <system:Double x:Key="FontSizeAverage">15</system:Double>
-    <system:Double x:Key="FontSizeRegular">18</system:Double>
-    <system:Double x:Key="FontSizeLarge">25</system:Double>
+    <system:Double x:Key="FontSizeSmaller">10</system:Double>
+    <system:Double x:Key="FontSizeSmall">12</system:Double>
+    <system:Double x:Key="FontSizeRegular">14</system:Double>
+    <system:Double x:Key="FontSizeLarge">20</system:Double>
+    <system:Double x:Key="FontSizeXLarge">24</system:Double>
+    <system:Double x:Key="FontSizeXXLarge">30</system:Double>
 
     <system:String x:Key="FontAwesomeChatIcon">&#xf086;</system:String>
     <system:String x:Key="FontAwesomeUserIcon">&#xf007;</system:String>
