Revert "Adaptive Control Design with View Model Binding"
This reverts commit 1eae0334dfc744bfe5481670ccfe42ff729f4d76.

--- a/Fasetto.Word/Fasetto.Word/Controls/Chat/ChatMessage/ChatMessageListControl.xaml
+++ b/Fasetto.Word/Fasetto.Word/Controls/Chat/ChatMessage/ChatMessageListControl.xaml
@@ -6,14 +6,13 @@
              xmlns:local="clr-namespace:Fasetto.Word"
              xmlns:core="clr-namespace:Fasetto.Word.Core;assembly=Fasetto.Word.Core"
              mc:Ignorable="d"
-             d:DesignHeight="600" d:DesignWidth="300">
+             d:DesignHeight="300" d:DesignWidth="300">
     
     <!--Container for item control
     1. define design time data context for item control
     2. background for this item control
     -->
-    <Grid DataContext="{x:Static core:ChatMessageListDesignModel.Instance}" 
-          VerticalAlignment="Bottom">
+    <Grid DataContext="{x:Static core:ChatListDesignModel.Instance}">
         <!--Scrollviewer to give ability to scroll for item controls-->
         <ScrollViewer VerticalScrollBarVisibility="Auto">
             <!--Item control-->
