--- a/Fasetto.Word/Fasetto.Word/Controls/Chat/ChatMessage/ChatMessageListItemControl.xaml
+++ b/Fasetto.Word/Fasetto.Word/Controls/Chat/ChatMessage/ChatMessageListItemControl.xaml
@@ -5,9 +5,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Fasetto.Word"
              xmlns:core="clr-namespace:Fasetto.Word.Core;assembly=Fasetto.Word.Core"
-             mc:Ignorable="d" d:DesignWidth="400">
-    
+             mc:Ignorable="d" d:DesignWidth="200">
     <Border Padding="5" 
+            Background="{StaticResource WordBlueBrush}"
             d:DataContext="{x:Static core:ChatMessageListItemDesignModel.Instance}"
             >
         <Grid>
@@ -15,10 +15,9 @@
             <!--#region Profile picture-->
             <Border VerticalAlignment="Top"
                     HorizontalAlignment="Left"
-                    Visibility="{Binding SentByMe, Converter={local:BooleanToVisibiltyConvertor}}"
                     CornerRadius="{Binding ActualWidth, RelativeSource={RelativeSource Mode=Self}}"
                     Height="{Binding ActualWidth, RelativeSource={RelativeSource Mode=Self}}"
-                    Width="30"
+                    Width="25"
                     Margin="0 5 0 5"
                     Background="{StaticResource WordGreenBrush}"
                     BorderBrush="{StaticResource BackgroundVeryLightBrush}"
@@ -33,28 +32,7 @@
             <!--#endregion-->
             
             <!--#region Chat message container-->
-            <Grid Margin="20 0 20 0" 
-                  HorizontalAlignment="{Binding SentByMe, Converter={local:SentByMeToAlignmentConverter}}">
-
-                <Grid.Triggers>
-                    <!--Mouse over shows time-->
-                    <EventTrigger RoutedEvent="MouseEnter">
-                        <BeginStoryboard>
-                            <Storyboard Storyboard.TargetName="ExtraDetails" Storyboard.TargetProperty="Opacity">
-                                <DoubleAnimation To="1" Duration="00:00:00.5" />
-                            </Storyboard>
-                        </BeginStoryboard>
-                    </EventTrigger>
-
-                    <!--Mouse leaves hide time-->
-                    <EventTrigger RoutedEvent="MouseLeave">
-                        <BeginStoryboard>
-                            <Storyboard Storyboard.TargetName="ExtraDetails" Storyboard.TargetProperty="Opacity">
-                                <DoubleAnimation To="0" Duration="00:00:00.5" />
-                            </Storyboard>
-                        </BeginStoryboard>
-                    </EventTrigger>
-                </Grid.Triggers>
+            <Grid Margin="20 0 0 0" HorizontalAlignment="Left">
 
                 <Grid.RowDefinitions>
                     <!--Row for message text-->
@@ -69,7 +47,7 @@
                 <Border Grid.Row="0" 
                         CornerRadius="5"
                         Padding="10" 
-                        Background="{Binding SentByMe, Converter={local:SentByMeToBackgroundConverter}}">
+                        Background="{StaticResource ForegroundLightBrush}">
                     <!--Message Text-->
                     <TextBlock VerticalAlignment="Center"
                                TextWrapping="Wrap"
@@ -81,22 +59,18 @@
                 
                 <!--#region Triangle Shape-->
                 <Path Grid.Row="1" 
-                      HorizontalAlignment="{Binding SentByMe, Converter={local:SentByMeToAlignmentConverter}}"
                       Margin="12, -1, 12, 0"
                       Stroke="{StaticResource ForegroundLightBrush}"
                       StrokeThickness="0"
-                      Fill="{Binding SentByMe, Converter={local:SentByMeToBackgroundConverter}}"
+                      Fill="{StaticResource ForegroundLightBrush}"
                       Data="M 0,0 L 8,8 L 16, 0"
                       />
                 <!--#endregion-->
 
                 <!--#region Text timings-->
                 
-                <!--Summary: Time containers-->
-                <StackPanel Grid.Row="2" 
-                            Opacity="0"
-                            Name="ExtraDetails"
-                            Orientation="Horizontal">
+                <!--Time containers-->
+                <StackPanel Grid.Row="2" Orientation="Horizontal">
 
                     <!--Sent time-->
                     <TextBlock Text="{Binding MessageSentTime, Converter={local:TimeToDisplayTimeConverter}}"
